@@ -1,6 +1,6 @@
 /* accentnormalisingitor.h: AccentNormalisingItor class for normalising accents.
  *
- * Copyright (C) 2003,2004,2005 Olly Betts
+ * Copyright (C) 2003,2004,2005,2006 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -14,13 +14,14 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
  * USA
  */
 
 #include "symboltab.h"
 
 #include <string>
+#include <limits.h> // For CHAR_BIT
 
 using std::string;
 
