@@ -1,3 +1,8 @@
+Sat Jan 07 05:29:39 GMT 2006  Olly Betts <olly@survex.com>
+
+	* queryparser/accentnormalisingitor.h: #include <limits.h> for
+	  CHAR_BIT.
+
 Fri Jan 06 21:24:01 GMT 2006  Olly Betts <olly@survex.com>
 
 	* bin/xapian-compact.cc: Fix printf type mismatch on 64 bit platforms.
